# gsheet-logger

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
config_templates/: .env.example  service_account.example.json
gsheet_logger/: __init__.py  cli.py  config_loader.py  core.py  sheet_logger.py
